--- a/css.html
+++ b/css.html
@@ -55,15 +55,13 @@
               <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Знакомство с Frontend</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="devtools.html">Devtools</a>
+                <li class="nav__item"><a class="nav__link" href="html_base.html">Базовый HTML</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
+                <li class="nav__item"><a class="nav__link" href="html_tags.html">Знакомство с тегами</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="css_base.html">Базовый CSS</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="css.html">CSS доп</a>
+                <li class="nav__item"><a class="nav__link" href="css_prop.html">Знакомство с свойствами</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="gradients.html">CSS градиенты</a>
                 </li>
@@ -197,6 +195,18 @@
                 <div style="height: 200px; width: 100%; background: #ffffff url('./assets/imgs/cat2.jpg') no-repeat right top;"></div>
               </dd>
               <dd><span class="alert"><a href="https://www.w3schools.com/cssref/css3_pr_background.asp" target="_blank">Расширенно про background</a></span></dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#3 Стилизация списков</h2>
+            <dl class="box__term">
+              <dt>   </dt>
+              <dd>
+                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="css,result" data-user="helentr7" data-slug-hash="PoppMdO" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Стилизация нумерованного списка"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/PoppMdO"></a>&Scy;&tcy;&icy;&lcy;&icy;&zcy;&acy;&tscy;&icy;&yacy; &ncy;&ucy;&mcy;&iecy;&rcy;&ocy;&vcy;&acy;&ncy;&ncy;&ocy;&gcy;&ocy; &scy;&pcy;&icy;&scy;&kcy;&acy;
+                   by Helen Trapeznikova (<a href="https://codepen.io/helentr7">@helentr7</a>)
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd>
             </dl>
           </div>
         </div>
