--- a/devtools.html
+++ b/devtools.html
@@ -55,11 +55,9 @@
               <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Знакомство с Frontend</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="devtools.html">Devtools</a>
+                <li class="nav__item"><a class="nav__link" href="html_base.html">Базовый HTML</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="html_tags.html">Знакомство с тегами</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
                 </li>
@@ -124,35 +122,7 @@
         </div>
       </header>
       <div class="main">
-        <div class="container">
-          <div class="box">
-            <h1 class="box__h1">Инструменты разработчика</h1>
-            <h2 class="box__h2">#1 Что такое devtools?</h2>
-            <dl class="box__term">
-              <dt>Инструменты разработчика</dt>
-              <dd>это режим, в котором вы можете просматривать стили страницы, смотреть скорость загрузки, ошибки JavaScript, структуру страницы. ИР есть в любом браузере практически, однако в каждом браузере чуть отличается между собой. Самый удобный ИР в браузере Google Chrome.</dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#2 Возможности и использование</h2>
-            <h3 class="box__h3">Способы открыть (Google Chrome)</h3>
-            <ul class="box__list">
-              <li>ПКМ - просмотреть код (см. скрин)</li>
-              <li>комбинация Ctrl + Shift + I (для windows)</li>
-            </ul><img class="box__screen" src="./assets/imgs/devtools1.jpg" alt="devtools">
-          </div>
-          <div class="box">
-            <h3 class="box__h3">Возможности (см. скрины)</h3>
-            <ul class="box__list">
-              <li>(1) инструмент, позволяет после его активации выбрать определенный элемент на странице для просмотра его разметки и свойств</li>
-              <li>(2) инструмент, для включения/выключения адаптивного режима</li>
-              <li>Elements (3) - вкладка с структурой HTML страницы</li>
-              <li>Console (4) - вкладка для удобной отладки работы скриптов javascript</li>
-              <li>Network (5) - вкладка для просмотра скорости загрузки элементов страницы сайта</li>
-              <li>Styles (6) - позволяет увидеть список стилей примененных к выбранному элементу</li>
-            </ul><img class="box__screen" src="./assets/imgs/devtools2.jpg" alt="devtools"><img class="box__screen" src="./assets/imgs/devtools3.jpg" alt="devtools">
-          </div>
-        </div>
+        <div class="container"></div>
       </div>
       <footer class="footer">
         <div class="container"></div>
