--- a/html_bl_in.html
+++ b/html_bl_in.html
@@ -59,7 +59,7 @@
                 </li>
                 <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="html_types.html">HTML, виды элементов</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
                 </li>
