--- a/forms.html
+++ b/forms.html
@@ -55,39 +55,27 @@
               <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Знакомство с Frontend</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="devtools.html">Devtools</a>
+                <li class="nav__item"><a class="nav__link" href="html_base.html">Базовый HTML</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
+                <li class="nav__item"><a class="nav__link" href="html_tags.html">Знакомство с тегами</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="css_base.html">Базовый CSS</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="css.html">CSS доп</a>
+                <li class="nav__item"><a class="nav__link" href="css_prop.html">Знакомство с свойствами</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="gradients.html">CSS градиенты</a>
                 </li>
-                <!--где-то здесь первая тестовая работа ДЗ-->
                 <li class="nav__item"><a class="nav__link" href="fonts.html">Шрифты</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Изображения
-                // Теги. Форматы изображений. Оптимизация изображений
-                -->
+                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes    </a>
+                </li>
                 <li class="nav__item"><a class="nav__link" href="position.html">Position + z-index</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS selectors</a>
+                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS селекторы</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Git
-                //Система контроля версий. Публикация проекта на GitHub.
-                -->
-                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes</a>
+                <li class="nav__item"><a class="nav__link" href="forms.html">Формы    </a>
                 </li>
-                <!--где-то здесь макет ДЗ №1 (html+css+flex)-->
                 <li class="nav__item"><a class="nav__link" href="bem.html">БЭМ методология</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
                 </li>
@@ -99,9 +87,6 @@
                 </li>
                 <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
                 </li>
-                <!--где-то здесь макет ДЗ №2(pug+scss+flex+адаптив)-->
-                <!--+e('li').__item+e('a').__link.opacity(href="") Bootstrap
-                -->
                 <li class="nav__item"><a class="nav__link" href="crossbr.html">Кроссбраузерность</a>
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_transition.html">CSS-transition</a>
@@ -110,14 +95,8 @@
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_animation.html">CSS3-анимации</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link(href="svg.html") Работа с SVG
-                //SVG-спрайты. SVG анимации.
-                -->
                 <li class="nav__item"><a class="nav__link opacity" href="">Grid</a>
                 </li>
-                <!--где-то здесь макет ДЗ №3(pug+scss+flex+адаптив+bootstrap+grid)-->
-                <!--где-то здесь ДИПЛОМ-->
               </ul>
             </nav>
           </div>
