--- a/html_base.html
+++ b/html_base.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>HTML base</title>
+    <title>Базовый HTML</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -55,39 +55,27 @@
               <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Знакомство с Frontend</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="devtools.html">Devtools</a>
+                <li class="nav__item"><a class="nav__link" href="html_base.html">Базовый HTML</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
+                <li class="nav__item"><a class="nav__link" href="html_tags.html">Знакомство с тегами</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="css_base.html">Базовый CSS</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="css.html">CSS доп</a>
+                <li class="nav__item"><a class="nav__link" href="css_prop.html">Знакомство с свойствами</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="gradients.html">CSS градиенты</a>
                 </li>
-                <!--где-то здесь первая тестовая работа ДЗ-->
                 <li class="nav__item"><a class="nav__link" href="fonts.html">Шрифты</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Изображения
-                // Теги. Форматы изображений. Оптимизация изображений
-                -->
+                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes    </a>
+                </li>
                 <li class="nav__item"><a class="nav__link" href="position.html">Position + z-index</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS selectors</a>
+                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS селекторы</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Git
-                //Система контроля версий. Публикация проекта на GitHub.
-                -->
-                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes</a>
+                <li class="nav__item"><a class="nav__link" href="forms.html">Формы    </a>
                 </li>
-                <!--где-то здесь макет ДЗ №1 (html+css+flex)-->
                 <li class="nav__item"><a class="nav__link" href="bem.html">БЭМ методология</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
                 </li>
@@ -99,9 +87,6 @@
                 </li>
                 <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
                 </li>
-                <!--где-то здесь макет ДЗ №2(pug+scss+flex+адаптив)-->
-                <!--+e('li').__item+e('a').__link.opacity(href="") Bootstrap
-                -->
                 <li class="nav__item"><a class="nav__link" href="crossbr.html">Кроссбраузерность</a>
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_transition.html">CSS-transition</a>
@@ -110,14 +95,8 @@
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_animation.html">CSS3-анимации</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link(href="svg.html") Работа с SVG
-                //SVG-спрайты. SVG анимации.
-                -->
                 <li class="nav__item"><a class="nav__link opacity" href="">Grid</a>
                 </li>
-                <!--где-то здесь макет ДЗ №3(pug+scss+flex+адаптив+bootstrap+grid)-->
-                <!--где-то здесь ДИПЛОМ-->
               </ul>
             </nav>
           </div>
@@ -126,79 +105,80 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">HTML base</h1>
-            <h2 class="box__h2">#1 Базовые теги</h2>
+            <h1 class="box__h1">Базовый HTML</h1>
+            <h2 class="box__h2">#1 Введение в HTML</h2>
             <dl class="box__term">
-              <dt>Форматирование текста</dt>
-              <dd>
-                <p class="codepen" data-height="382" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="oNZBGJQ" style="height: 382px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Форматирование текста"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/oNZBGJQ">Форматирование текста</a></span>
-                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-              </dd><br>
-              <ul class="box__list" style="list-style: none; margin:  0 0 20px;">
-                <li>&lt;p&gt; - разбивает текст на отдельные абзацы, отделяя друг от друга пустой строкой. Браузер автоматически добавляет верхний и нижний отступ, равный 1em, при этом отступы соседних абзацев «схлопываются».</li>
-                <li>&lt;b&gt; - задаёт полужирное начертания шрифта.</li>
-                <li>&lt;strong&gt; - задаёт полужирное начертание шрифта, относится к тегам логической разметки, указывая браузеру на важность текста.</li>
-                <li>&lt;i&gt; - отображает шрифт курсивом.</li>
-                <li>&lt;em&gt; - отображает шрифт курсивом, придавая тексту значимость.</li>
-                <li>&lt;small&gt; - уменьшает размер шрифта на единицу по отношению к обычному тексту.</li>
-                <li>&lt;sub&gt; - используется для создания нижних индексов. Сдвигает текст ниже уровня строки, уменьшая его размер.</li>
-                <li>&lt;sup&gt; - используется для создания степеней. Сдвигает текст выше уровня строки, уменьшая его размер.</li>
-                <li>&lt;ins&gt; - выделяет текст в новой версии документа, подчёркивая его.</li>
-                <li>&lt;del&gt; - перечёркивает текст. Используется для выделения текста, удаленного из документа.</li>
-                <li>&lt;mark&gt; - применяется для выделения фрагментов текста в справочных целях, окрашивая блок символов желтым цветом.</li>
-                <li>&lt;code&gt; - служит для выделения фрагментов программного кода. Отображается моноширинным шрифтом.</li>
-                <li>&lt;kbd&gt; - отмечает фрагмент как вводимый пользователем с клавиатуры. Отображается моноширинным шрифтом.</li>
-                <li>&lt;samp&gt; - применяется для выделения результата, полученного в ходе выполнения программы. Отображается моноширинным шрифтом.</li>
-                <li>&lt;abbr&gt; - Применяется для форматирования аббревиатур. Браузером обычно подчеркивается пунктирной линией. Расшифровка сокращения осуществляется с помощью атрибута title, она появляется при наведении курсора мыши на текст.</li>
-                <li>&lt;bdo&gt; - используется для замещения текущего направления текста, т.е. текст в теге отображается зеркально.</li>
-                <li>&lt;blockquote&gt; - Выделяет цитаты внутри документа, выделяя его отступами и переносами строк. Для тега доступен атрибут cite.</li>
-                <li>&lt;q&gt; - используется для выделения коротких цитат. Браузерами заключается в кавычки. Для тега доступен атрибут cite.</li>
-                <li>&lt;cite&gt; - применяется для выделения цитат, названий произведений, сносок на другие документы.</li>
-                <li>&lt;dfn&gt; - позволяет выделить текст как определение. Несмотря на наличие специального тега, рекомендуется выделять текст силами CSS.</li>
-                <li>&lt;br&gt; - переносит текст на следующую строку, создавая разрыв строки.</li>
-                <li>&lt;hr&gt; - используется для разделения контента на веб-странице. Отображается в виде горизонтальной линии.</li>
-              </ul>
-            </dl><br>
-            <dl class="box__term">
-              <dt>Заголовки</dt>
-              <dd></dd>
-              <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="rNyjGdw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Заголовки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/rNyjGdw">Заголовки</a></span>
-              <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-            </dl><br>
-            <dl class="box__term">
-              <dt>Маркированные/нумерованные списки</dt>
-              <dd>
-                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="LYWxzvX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Списки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/LYWxzvX">Маркированные/нумерованные списки</a></span>
-                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-              </dd>
-            </dl><br>
-            <dl class="box__term">
-              <dt>Таблицы<a class="alert" href="https://www.w3schools.com/html/html_tables.asp" target="_blank">-> Расширенная инфо по таблицам</a></dt>
-              <dd>
-                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="PopWJMw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Таблицы"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/PopWJMw">Таблицы</a></span>
-                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-              </dd>
-            </dl><br>
-            <dl class="box__term">
-              <dt>Ссылки/кнопки</dt>
-              <dd>
-                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="WNpRXQR" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Ссылки/кнопки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/WNpRXQR">Ссылки/кнопки</a></span>
-                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-              </dd>
-            </dl><br>
-            <dl class="box__term">
-              <dt>Изображения<a class="alert" href="https://www.w3schools.com/tags/tag_img.asp" target="_blank">-> Расширенная инфо по изображениям  </a></dt>
-              <dd>
-                <h3 class="box__h4">Аттрибуты:</h3>
-                <ul class="box__list">
-                  <li>src(обязательный) - путь к картинке</li>
-                  <li>alt(обязательный) - альтернативный текст</li>
-                  <li>title - текст при наведении на картинку</li>
-                </ul>
-                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="GRWrONp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Изображения"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/GRWrONp">Изображения</a></span>
-                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-              </dd>
+              <dt>Тег (HTML элемент)</dt>
+              <dd>это основная структурная единица веб-страницы, написанная на языке HTML.</dd>
             </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#2 Базовая структура HTML</h2><img class="box__screen" src="./assets/imgs/base_html.jpg" alt="html">
+            <dl class="box__term">
+              <dt>&lt;!DOCTYPE html&gt;</dt>
+              <dd>Элемент предназначен для указания типа текущего документа — DTD (document type definition, описание типа документа).  Это необходимо, чтобы браузер понимал, как следует интерпретировать текущую веб-страницу, поскольку HTML существует в нескольких версиях, кроме того, имеется XHTML (EXtensible HyperText Markup Language, расширенный язык разметки гипертекста), похожий на HTML, но различающийся с ним по синтаксису. Чтобы браузер «не путался» и понимал, согласно какому стандарту отображать веб-страницу и необходимо в первой строке кода задавать &lt;!DOCTYPE&gt;.<br> Есть несколько вариантов DOCTYPE. Самый актуальный - в примере. Он появился в HTML5 , и является актуальным до сих пор.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;html&gt;</dt>
+              <dd>Открывающий тег &lt;html&gt; определяет начало HTML-документа, внутри него хранится «голова» (&lt;head&gt;) и «тело» документа (&lt;body&gt;).</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;head&gt;</dt>
+              <dd>Содержимое этого раздела не показывается напрямую на странице, за исключением элемента &lt;title&gt;. Внутри &lt;head&gt; могут располагаться следующие элементы: &lt;base&gt;, &lt;link&gt;, &lt;meta&gt;, &lt;script&gt;, &lt;style&gt; или &lt;title&gt;.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;body&gt;</dt>
+              <dd>Внутри body находится структура документа, все теги, а также может быть подключен JS.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;title&gt;</dt>
+              <dd>Определяет заголовок документа.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;meta&gt;</dt>
+              <dd>является универсальным и добавляет целый класс возможностей, в частности, с помощью метатега, как обобщённо называют этот элемент, можно изменить кодировку страницы, добавить ключевые слова, описание документа и многое другое, предназначенное для браузера или поисковых систем. В частности, чтобы браузер понимал, что имеет дело с кодировкой UTF-8 (Unicode transformation format, формат преобразования Юникод) и добавляется данная строка.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#3 Виды тегов</h2>
+            <dl class="box__term">
+              <dt>парные</dt>
+              <dd>&lt;div&gt;&lt;/div&gt; ; &lt;span&gt;&lt;/span&gt; ; &lt;b&gt;&lt;/b&gt; ... etc</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>непарные</dt>
+              <dd>&lt;!DOCTYPE html&gt; ; &lt;link&gt; ; &lt;img&gt; ; &lt;input&gt; ; &lt;br&gt; ; &lt;hr&gt; ... etc</dd>
+            </dl>
+            <div class="box__text">
+              <p>Все теги делятся между собой по разным критериям. Самые основные - это парные и непарные теги. Название говорит само за себя. В случае  с парным тегом обязательно должен быть закрывающий тег, с таким же названием но дополнительным символом. Непарные же теги имеют закрывающий символ в конце</p>
+            </div>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#4 Виды html элементов</h2>
+            <dl class="box__term">
+              <dt>Блочные</dt>
+              <dd>
+                Блочные элементы являются основой, которая используется для верстки веб-страниц. Такой элемент представляетсобой прямоугольник, который по умолчанию занимает всю доступную ширину страницы (если иное значение не
+                указано в CSS), а длина элемента зависит от его содержимого. Такой элемент всегда начинается с новой строки,
+                то есть, располагается под предыдущим элементом. Блочный элемент может содержать в себе другие блочные и
+                строчные элементы.
+              </dd>
+              <dd>&lt;div&gt; ; &lt;p&gt; ; &lt;ul&gt; ; &lt;ol&gt; ; &lt;h1&gt; ... etc</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Строчные</dt>
+              <dd>
+                В отличие от блочного, строчный элемент не переносится на новую строку, а располагается на той же строке,что и предыдущий элемент. Такие элементы, как правило, находятся внутри блочных элементов и их ширина зависит
+                лишь от содержимого и настроек CSS. Еще одно отличие строчного элемента от блочного заключается к том,
+                что в нем может находиться только контент и другие строчные элементы. <span class="important">Блочные элементы
+                в строчные вкладывать нельзя</span>.
+              </dd>
+              <dd>&lt;a&gt; ; &lt;span&gt; ; &lt;strong&gt; ; &lt;em&gt; ; &lt;img&gt; ... etc</dd>
+            </dl>
+            <div style="border: 1px solid #fff; height: 50px;">div - блочный</div>
+            <div style="border: 1px solid red; height: 50px;">div - блочный</div>
+            <div style="border: 1px solid blue; height: 50px;">div - блочный</div>
+            <div style="border: 1px solid green; height: 50px;">div - блочный</div><span style="border: 1px solid #fff; height: 50px;">span - строчный</span><span style="border: 1px solid red; height: 50px;">span - строчный</span><span style="border: 1px solid blue; height: 50px;">span - строчный</span><span style="border: 1px solid green; height: 50px;">span - строчный</span>
           </div>
         </div>
       </div>
