--- a/html_tags.html
+++ b/html_tags.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>Работа с сборкой</title>
+    <title>Знакомство с тегами</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -105,28 +105,90 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">Работа с сборкой</h1>
-            <h2 class="box__h2">#1 Базовая работа</h2>
-            <h3 class="box__h3">Для работы над вторым макетом</h3>
+            <h1 class="box__h1">Знакомство с тегами</h1>
+            <h2 class="box__h2">#1 Форматирование текста</h2>
             <dl class="box__term">
-              <dt>Файл layout.pug</dt>
-              <dd>базовая разметка страницы(менять не нужно)</dd>
-              <dd><img class="box__screen" src="./assets/imgs/pr1.jpg"></dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Файл index.pug</dt>
-              <dd>разметка главной страницы(пишем код html в синтаксисе pug здесь)</dd>
-              <dd><img class="box__screen" src="./assets/imgs/pr2.jpg"></dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Файл app.scss</dt>
-              <dd>стили сайта(пишем код css в синтаксисе scss здесь)</dd>
-              <dd><img class="box__screen" src="./assets/imgs/pr3.jpg"></dd>
+              <dd>
+                <p class="codepen" data-height="382" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="oNZBGJQ" style="height: 382px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Форматирование текста"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/oNZBGJQ">Форматирование текста</a></span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd><br>
+              <ul class="box__list" style="list-style: none; margin:  0 0 20px;">
+                <li>&lt;p&gt; - разбивает текст на отдельные абзацы, отделяя друг от друга пустой строкой. Браузер автоматически добавляет верхний и нижний отступ, равный 1em, при этом отступы соседних абзацев «схлопываются».</li>
+                <li>&lt;b&gt; - задаёт полужирное начертания шрифта.</li>
+                <li>&lt;strong&gt; - задаёт полужирное начертание шрифта, относится к тегам логической разметки, указывая браузеру на важность текста.</li>
+                <li>&lt;i&gt; - отображает шрифт курсивом.</li>
+                <li>&lt;em&gt; - отображает шрифт курсивом, придавая тексту значимость.</li>
+                <li>&lt;small&gt; - уменьшает размер шрифта на единицу по отношению к обычному тексту.</li>
+                <li>&lt;sub&gt; - используется для создания нижних индексов. Сдвигает текст ниже уровня строки, уменьшая его размер.</li>
+                <li>&lt;sup&gt; - используется для создания степеней. Сдвигает текст выше уровня строки, уменьшая его размер.</li>
+                <li>&lt;ins&gt; - выделяет текст в новой версии документа, подчёркивая его.</li>
+                <li>&lt;del&gt; - перечёркивает текст. Используется для выделения текста, удаленного из документа.</li>
+                <li>&lt;mark&gt; - применяется для выделения фрагментов текста в справочных целях, окрашивая блок символов желтым цветом.</li>
+                <li>&lt;code&gt; - служит для выделения фрагментов программного кода. Отображается моноширинным шрифтом.</li>
+                <li>&lt;kbd&gt; - отмечает фрагмент как вводимый пользователем с клавиатуры. Отображается моноширинным шрифтом.</li>
+                <li>&lt;samp&gt; - применяется для выделения результата, полученного в ходе выполнения программы. Отображается моноширинным шрифтом.</li>
+                <li>&lt;abbr&gt; - Применяется для форматирования аббревиатур. Браузером обычно подчеркивается пунктирной линией. Расшифровка сокращения осуществляется с помощью атрибута title, она появляется при наведении курсора мыши на текст.</li>
+                <li>&lt;bdo&gt; - используется для замещения текущего направления текста, т.е. текст в теге отображается зеркально.</li>
+                <li>&lt;blockquote&gt; - Выделяет цитаты внутри документа, выделяя его отступами и переносами строк. Для тега доступен атрибут cite.</li>
+                <li>&lt;q&gt; - используется для выделения коротких цитат. Браузерами заключается в кавычки. Для тега доступен атрибут cite.</li>
+                <li>&lt;cite&gt; - применяется для выделения цитат, названий произведений, сносок на другие документы.</li>
+                <li>&lt;dfn&gt; - позволяет выделить текст как определение. Несмотря на наличие специального тега, рекомендуется выделять текст силами CSS.</li>
+                <li>&lt;br&gt; - переносит текст на следующую строку, создавая разрыв строки.</li>
+                <li>&lt;hr&gt; - используется для разделения контента на веб-странице. Отображается в виде горизонтальной линии.</li>
+              </ul>
             </dl>
           </div>
           <div class="box">
-            <h2 class="box__h2">#2 Пример готового проекта</h2>
-            <p><span class="alert"><a href="https://github.com/HelenTR7/ready_project_gulp" target="_blank">https://github.com/HelenTR7/ready_project_gulp</a></span></p>
+            <h2 class="box__h2">#2 Заголовки</h2>
+            <dl class="box__term">
+              <dd></dd>
+              <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="rNyjGdw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Заголовки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/rNyjGdw">Заголовки</a></span>
+              <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#3 Маркированные/нумерованные списки</h2>
+            <dl class="box__term">
+              <dd>
+                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="LYWxzvX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Списки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/LYWxzvX">Маркированные/нумерованные списки</a></span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#4 Таблицы</h2>
+            <dl class="box__term">
+              <dt><a class="alert" href="https://www.w3schools.com/html/html_tables.asp" target="_blank">-> Расширенная инфо по таблицам</a></dt>
+              <dd>
+                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="PopWJMw" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Таблицы"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/PopWJMw">Таблицы</a></span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#5 Ссылки/кнопки    </h2>
+            <dl class="box__term">
+              <dd>
+                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="WNpRXQR" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Ссылки/кнопки"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/WNpRXQR">Ссылки/кнопки</a></span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#6 Изображения  </h2>
+            <dl class="box__term">
+              <dt><a class="alert" href="https://www.w3schools.com/tags/tag_img.asp" target="_blank">-> Расширенная инфо по изображениям  </a></dt>
+              <dd>
+                <h3 class="box__h4">Аттрибуты:</h3>
+                <ul class="box__list">
+                  <li>src(обязательный) - путь к картинке</li>
+                  <li>alt(обязательный) - альтернативный текст</li>
+                  <li>title - текст при наведении на картинку</li>
+                </ul>
+                <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="helentr7" data-slug-hash="GRWrONp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Изображения"></p><span>See the Pen <a href="https://codepen.io/helentr7/pen/GRWrONp">Изображения</a></span>
+                <script async="" src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+              </dd>
+            </dl>
           </div>
         </div>
       </div>
