--- a/index.html
+++ b/index.html
@@ -55,39 +55,27 @@
               <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Знакомство с Frontend</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="devtools.html">Devtools</a>
+                <li class="nav__item"><a class="nav__link" href="html_base.html">Базовый HTML</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_base.html">HTML base</a>
+                <li class="nav__item"><a class="nav__link" href="html_tags.html">Знакомство с тегами</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="html_bl_in.html">Block/inline</a>
+                <li class="nav__item"><a class="nav__link" href="css_base.html">Базовый CSS</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="css.html">CSS доп</a>
+                <li class="nav__item"><a class="nav__link" href="css_prop.html">Знакомство с свойствами</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="gradients.html">CSS градиенты</a>
                 </li>
-                <!--где-то здесь первая тестовая работа ДЗ-->
                 <li class="nav__item"><a class="nav__link" href="fonts.html">Шрифты</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Изображения
-                // Теги. Форматы изображений. Оптимизация изображений
-                -->
+                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes    </a>
+                </li>
                 <li class="nav__item"><a class="nav__link" href="position.html">Position + z-index</a>
                 </li>
-                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS selectors</a>
+                <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS селекторы</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link.opacity(href="") Git
-                //Система контроля версий. Публикация проекта на GitHub.
-                -->
-                <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes</a>
+                <li class="nav__item"><a class="nav__link" href="forms.html">Формы    </a>
                 </li>
-                <!--где-то здесь макет ДЗ №1 (html+css+flex)-->
                 <li class="nav__item"><a class="nav__link" href="bem.html">БЭМ методология</a>
-                </li>
-                <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
                 </li>
                 <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
                 </li>
@@ -99,9 +87,6 @@
                 </li>
                 <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
                 </li>
-                <!--где-то здесь макет ДЗ №2(pug+scss+flex+адаптив)-->
-                <!--+e('li').__item+e('a').__link.opacity(href="") Bootstrap
-                -->
                 <li class="nav__item"><a class="nav__link" href="crossbr.html">Кроссбраузерность</a>
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_transition.html">CSS-transition</a>
@@ -110,14 +95,8 @@
                 </li>
                 <li class="nav__item"><a class="nav__link opacity" href="css_animation.html">CSS3-анимации</a>
                 </li>
-                <!--+e('li').__item
-                +e('a').__link(href="svg.html") Работа с SVG
-                //SVG-спрайты. SVG анимации.
-                -->
                 <li class="nav__item"><a class="nav__link opacity" href="">Grid</a>
                 </li>
-                <!--где-то здесь макет ДЗ №3(pug+scss+flex+адаптив+bootstrap+grid)-->
-                <!--где-то здесь ДИПЛОМ-->
               </ul>
             </nav>
           </div>
@@ -151,53 +130,43 @@
             </dl>
           </div>
           <div class="box">
-            <h2 class="box__h2">#2 Введение в HTML</h2>
+            <h2 class="box__h2">#2 Редактор кода/ Среда разработки/(IDE)</h2>
+            <h3 class="box__h3">Что это?</h3>
             <dl class="box__term">
-              <dt>Тег (HTML элемент)</dt>
-              <dd>это основная структурная единица веб-страницы, написанная на языке HTML.</dd>
+              <dt>IDE </dt>
+              <dd>комплекс программных средств, используемый программистами для разработки программного обеспечения (ПО).</dd>
             </dl>
+            <h3 class="box__h3">Некоторые редакторы/IDE:</h3>
+            <ul class="box__term"> 
+              <dt>Notepad++</dt>
+              <dt>Brackets</dt>
+              <dt>Sublime Text </dt>
+              <dt>Atom</dt>
+              <dt>VSCode</dt>
+              <dt>WebStorm</dt>
+            </ul>
           </div>
           <div class="box">
-            <h2 class="box__h2">#3 Базовая структура HTML</h2><img class="box__screen" src="./assets/imgs/base_html.jpg" alt="html">
+            <h2 class="box__h2">#3 Devtools (инструменты разработчика)</h2>
+            <h3 class="box__h3">Что это?</h3>
             <dl class="box__term">
-              <dt>&lt;!DOCTYPE html&gt;</dt>
-              <dd>Элемент предназначен для указания типа текущего документа — DTD (document type definition, описание типа документа).  Это необходимо, чтобы браузер понимал, как следует интерпретировать текущую веб-страницу, поскольку HTML существует в нескольких версиях, кроме того, имеется XHTML (EXtensible HyperText Markup Language, расширенный язык разметки гипертекста), похожий на HTML, но различающийся с ним по синтаксису. Чтобы браузер «не путался» и понимал, согласно какому стандарту отображать веб-страницу и необходимо в первой строке кода задавать &lt;!DOCTYPE&gt;.<br> Есть несколько вариантов DOCTYPE. Самый актуальный - в примере. Он появился в HTML5 , и является актуальным до сих пор.</dd>
+              <dt>Инструменты разработчика</dt>
+              <dd>это режим, в котором вы можете просматривать стили страницы, смотреть скорость загрузки, ошибки JavaScript, структуру страницы. ИР есть в любом браузере практически, однако в каждом браузере чуть отличается между собой. Самый удобный ИР в браузере Google Chrome.</dd>
             </dl>
-            <dl class="box__term">
-              <dt>&lt;html&gt;</dt>
-              <dd>Открывающий тег &lt;html&gt; определяет начало HTML-документа, внутри него хранится «голова» (&lt;head&gt;) и «тело» документа (&lt;body&gt;).</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;head&gt;</dt>
-              <dd>Содержимое этого раздела не показывается напрямую на странице, за исключением элемента &lt;title&gt;. Внутри &lt;head&gt; могут располагаться следующие элементы: &lt;base&gt;, &lt;link&gt;, &lt;meta&gt;, &lt;script&gt;, &lt;style&gt; или &lt;title&gt;.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;body&gt;</dt>
-              <dd>Внутри body находится структура документа, все теги, а также может быть подключен JS.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;title&gt;</dt>
-              <dd>Определяет заголовок документа.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;meta&gt;</dt>
-              <dd>является универсальным и добавляет целый класс возможностей, в частности, с помощью метатега, как обобщённо называют этот элемент, можно изменить кодировку страницы, добавить ключевые слова, описание документа и многое другое, предназначенное для браузера или поисковых систем. В частности, чтобы браузер понимал, что имеет дело с кодировкой UTF-8 (Unicode transformation format, формат преобразования Юникод) и добавляется данная строка.</dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#4 Знакомство с тегами</h2>
-            <h3 class="box__h3">Виды тегов</h3>
-            <dl class="box__term">
-              <dt>парные</dt>
-              <dd>&lt;div&gt;&lt;/div&gt; ; &lt;span&gt;&lt;/span&gt; ; &lt;b&gt;&lt;/b&gt; ... etc</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>непарные</dt>
-              <dd>&lt;!DOCTYPE html&gt; ; &lt;link&gt; ; &lt;img&gt; ; &lt;input&gt; ; &lt;br&gt; ; &lt;hr&gt; ... etc</dd>
-            </dl>
-            <div class="box__text">
-              <p>Все теги делятся между собой по разным критериям. Самые основные - это парные и непарные теги. Название говорит само за себя. В случае  с парным тегом обязательно должен быть закрывающий тег, с таким же названием но дополнительным символом. Непарные же теги имеют закрывающий символ в конце</p>
-            </div>
+            <h3 class="box__h3">Способы открыть (Google Chrome)</h3>
+            <ul class="box__list">
+              <li>ПКМ - просмотреть код (см. скрин)</li>
+              <li>комбинация Ctrl + Shift + I (для windows)</li>
+            </ul><img class="box__screen" src="./assets/imgs/devtools1.jpg" alt="devtools">
+            <h3 class="box__h3">Возможности (см. скрины)</h3>
+            <ul class="box__list">
+              <li>(1) инструмент, позволяет после его активации выбрать определенный элемент на странице для просмотра его разметки и свойств</li>
+              <li>(2) инструмент, для включения/выключения адаптивного режима</li>
+              <li>Elements (3) - вкладка с структурой HTML страницы</li>
+              <li>Console (4) - вкладка для удобной отладки работы скриптов javascript</li>
+              <li>Network (5) - вкладка для просмотра скорости загрузки элементов страницы сайта</li>
+              <li>Styles (6) - позволяет увидеть список стилей примененных к выбранному элементу</li>
+            </ul><img class="box__screen" src="./assets/imgs/devtools2.jpg" alt="devtools"><img class="box__screen" src="./assets/imgs/devtools3.jpg" alt="devtools">
           </div>
         </div>
       </div>
